# 2026_RAG_-LangChain_-_ChatGPTApi_Python

./: .gitignore  chroma_db.py  config.py  loader.py  main.py  pyproject.toml  split_text.py
chroma_db/: chroma.sqlite3
